--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,8 @@
 }
 
 .navbar > .navbar-logo img {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
 }
 
@@ -120,10 +120,76 @@
 
 .main {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 50dvh;
     margin-top: 110px;
-    background: var(--silver);
+    background: var(--midnight);
+}
+
+.main > .intro {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    gap: 10px;
+    width: 100%;
+    height: 100%;
+    padding: 0 4%;
+}
+
+.main > .intro > .intro-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.main > .intro > .intro-text h1 {
+    color: var(--snow);
+    font-family: "Poppins", sans-serif;
+    font-size: 40px;
+}
+
+.main > .intro > .intro-text h1::after {
+    content: "";
+    display: flex;
+    margin: 0 auto;
+    margin-top: -10px;
+    bottom: 0;
+    width: 150px;
+    height: 3px;
+    background: var(--crimson);
+}
+
+.main > .intro > .intro-text p {
+    color: var(--snow);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+    font-size: 18px;
+    width: 50%;
+}
+
+.scroll-to-contact {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 20px;
+    color: var(--snow);
+    background-color: var(--charcoal);
+    border: none;
+    border-radius: 12px;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.scroll-to-contact:hover {
+    background-color: var(--crimson);
+    transform: scale(1.05);
 }
 
 /* Serviços */
@@ -236,15 +302,18 @@
     text-transform: uppercase;
 }
 
-.sobre-nos > .cta-sobre-nos > .text-sobre-nos hr {
-    width: 200px;
-    height: 5px;
+.sobre-nos > .cta-sobre-nos > .text-sobre-nos h1::after {
+    content: "";
+    display: flex;
+    left: 0;
+    bottom: 0;
+    width: 100px;
+    height: 3px;
     background: var(--crimson);
-    border: none;
 }
 
 .sobre-nos > .cta-sobre-nos > .text-sobre-nos p{
-    
+    margin-top: 10px;
     text-align: justify;
     font-size: 18px;
 }
@@ -332,32 +401,12 @@ option {
     color: var(--crimson); 
 }
 
-textarea { 
-    resize: none;
-    overflow: auto;
-    width: 100%;
-    height: 100px;
-    padding: 5px;
-    color: var(--snow);
-    background: var(--charcoal);
-    border: 1px solid var(--silver);
+input.input-error, select.input-error {
+    border: 2px solid red !important;
 }
 
-textarea::-webkit-scrollbar {
-    width: 5px; 
-    height: 5px;
-}
-
-textarea::-webkit-scrollbar-thumb:hover {
-    cursor: pointer; 
-}
-
-textarea::-webkit-scrollbar-track {
-    background: transparent;  
-}
-
-textarea::-webkit-scrollbar-thumb {
-    background: var(--crimson);  
+input.input-verified, select.input-verified {
+    border: 2px solid green !important;
 }
 
 
