--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
+#botao-voltar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 1000;
+    background: var(--crimson);
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    margin: 10px;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    opacity: 0;
+}
+
+#botao-voltar.visivel {
+    opacity: 1;
+}
+
+#botao-voltar i{
+    display: block;
+    color: var(--snow);
+    font-size: 22px;
+}
+
+.botao-voltar:hover{
+    transform: translateY(-5px);
+}
+
+
 /* Header */
 
 .cabecalho {
@@ -117,6 +150,18 @@
     transform: scale(1.05);
 }
 
+.cabecalho > .navbar > .navbar-menu > .mobile-navbar-contato {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    padding: 12px;
+    color: var(--snow);
+    background: var(--crimson);
+    border-radius: 50%; 
+}
+
 
 .main {
     display: flex;
@@ -158,7 +203,7 @@
     content: "";
     display: flex;
     margin: 0 auto;
-    margin-top: -10px;
+    margin-top: -5px;
     bottom: 0;
     width: 150px;
     height: 3px;
@@ -212,6 +257,7 @@
     width: 100%;
     height: 100%;
     flex-wrap: wrap;
+    flex: 1;
 }
 
 .servicos > .container-servicos > .card-servico {
@@ -277,6 +323,18 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.9) 15%, rgba(0, 0, 0, 0.3) 65%, rgba(255, 255, 255, 0) 100%);
+    z-index: -1;
+}
+
+.sobre-nos::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    filter: blur(2px);
     z-index: -1;
 }
 
