--- a/assets/views/index.html
+++ b/assets/views/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oficina do Fábio</title>
 
+    <!-- FAVICON -->
+     <link rel="shortcut icon" href="../img/logo_oficina.png" type="image/x-icon">
+    <!-- LINK CSS -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="../css/fontawesome/css/all.min.css">
 
-
+    <!-- SCROLL REVEAL -->
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
@@ -39,12 +43,16 @@
                 <li><a href="#servicos" id="active-link">Serviços</a></li>
                 <li><a href="#sobre-nos" id="active-link">Sobre Nós</a></li>
             </ul>
+
+            <div class="mobile-navbar-contato">
+                <i class="fa-brands fa-whatsapp"></i>
+            </div>
         </div>
 
         <div class="navbar-contato">
             <i class="fa-brands fa-whatsapp"></i>
-            <a href="#contato">Faça o seu orçamento</a>
-        </div>     
+            <a href="#contato">Faça o seu orçamento</a>  
+        </div>        
     </nav>
 
 </header>
@@ -127,8 +135,8 @@
 
     </section>
 
-   <div class="botao-voltar">
-    
+   <div id="botao-voltar">
+    <a href="#main"><i class="fa-solid fa-arrow-up"></i></a>
    </div> 
 
     <script src="../js/script.js"></script>
